tests/success/while.moc
asm("
    CALL (LB) f_main
    HALT
")

void main() {
    int x = 0;

    while(x <= 3) {
        x = x + 1;
    }
}
