tests/error/class-24.moc
@class NSObject {
    int a;
}
+(id)init {
    a = 0;
}
@end

@class Point : NSObject {
    int x;
    int y;
}

+(id)init {
    x = 0;
    y = 0;
    a = true;
}

@end
